assets/css/amp-validation-error-taxonomy.css
#col-left {
	display: none;
}
#col-right {
	float: none;
	width: auto;
}

/* Improve column widths */
td.column-details pre,
td.column-sources pre {
	overflow: auto;
}

th.column-created_date_gmt,
th.column-error_type {
	width: 15%;
}

th.column-status {
	width: 10%;
}

.fixed th.column-posts {
	width: 10%;
}

/* Details column */
.column-details .details-attributes__summary {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

details[open] .details-attributes__summary {
	font-weight: 600;
	margin-bottom: 15px;
}

.column-details .details-attributes__summary::-webkit-details-marker,
.column-details .notice details > summary::-webkit-details-marker {
	display: none;
}
.details-attributes__summary::after,
.single-error-detail-summary::after {
	order: 99;
	width: 12px;
	height: 12px;
	background-image: url("../images/down-triangle.svg");
	background-size: cover;
	background-position: center;
	content: "";
}

details[open] .details-attributes__summary::after,
details.single-error-detail[open] .single-error-detail-summary::after {
	transform: rotate(180deg);
}

.notice .detailed {
	padding-left: 15px;
}

.notice .detailed details {
	padding-bottom: 16px;
}

.notice .detailed details .detailed {
	padding-left: 32px;
	font-family: Consolas, Monaco, monospace;
}

.details-attributes__title code,
.notice .detailed summary code {
	display: inline-block;
	min-width: 240px;
	margin-left: 18px;
	font-weight: 600;
}

.details-attributes__title code {
	margin-left: 0;
}

.details-attributes__list {
	margin-top: 0;
	padding-left: 0;
	list-style: none;
	font-family: Consolas, Monaco, monospace;
}

.details-attributes__list li {
	word-break: break-all;
}

.details-attributes__attr {
	font-weight: 600;
}

.column-sources_with_invalid_output details[open] .details-attributes__summary {
	margin-bottom: 5px;
}
.column-sources_with_invalid_output details > div {
	padding-left: 25px;
}

/* Error details toggle button */
.manage-column.column-sources_with_invalid_output .error-details-toggle {
	margin: 0;
}

.error-details-toggle {
	float: right;
	display: flex;
	flex-direction: column;
	height: 14px;
	padding: 0;
	background: none;
	border: none;
	cursor: pointer;
}

.error-details-toggle.is-open {
	transform: rotate(180deg);
}

.column-details .error-details-toggle::before,
.column-details .error-details-toggle::after {
	width: 12px;
	height: 12px;
	background-image: url("../images/down-triangle.svg");
	background-size: cover;
	background-position: center;
	content: "";
}

/* Status text icons */
.status-text {
	display: flex;
	align-items: center;
}

.status-text::before {
	margin-right: 10px;
	background-size: 20px 20px;
	height: 20px;
	width: 20px;
	content: "";
}

.status-text.sanitized::before {
	background-image: url("../images/amp-logo-icon.svg");
}

.status-text.new::before {
	background-image: url("../images/baseline-error.svg");
}

.status-text.accepted::before {
	background-image: url("../images/baseline-check-circle-green.svg");
}

.status-text.rejected::before {
	background-image: url("../images/baseline-error-blue.svg");
}
.single-error-detail {
	margin: 5px 0 5px 0;
}
.single-error-detail-summary:after {
	display: inline-block;
}
.single-error-detail-summary strong {
	margin-right: 10px;
	font-size: 15px;
}
.single-error-detail ul.secondary-details-array .details-attributes__attr {
	margin-left: 20px;
}
.single-error-detail ul.secondary-details-array .details-attributes__value {
	margin-left: 30px;
}
.single-error-detail .details-attributes__value {
	margin-left: 10px;
}

body.taxonomy-amp_validation_error .wp-list-table .new th,
body.taxonomy-amp_validation_error .wp-list-table .new td {
	background-color: #fef7f1;
}

body.taxonomy-amp_validation_error .wp-list-table .new th.check-column {
	border-left: 4px solid #d54e21;
}

body.taxonomy-amp_validation_error .wp-list-table .new th.check-column input {
	margin-left: 4px;
}

.row-actions .amp_validation_error_accept > a {
	color: #006505;
}

.row-actions .amp_validation_error_reject > a {
	color: #a00;
}

.notice.accept-reject-error {
	display: flex;
}

.notice.accept-reject-error > p {
	display: inline-block;
	font-size: 14px;
	flex-grow: 10;
	margin-right: 20px;
}
.notice.accept-reject-error > .button {
	display: inline-block;
	margin: 5px 5px 0 5px;
	padding: 0 26px 2px;
	flex-grow: 1;
	text-align: center;
}
.notice.accept-reject-error > .button.accept {
	/* @todo Add green colors */
}
.notice.accept-reject-error > .button.reject {
	/* @todo Add red colors */
}

.wp-heading-inline .status-text {
	display: inline-flex;
	margin-left: 10px;
	vertical-align: middle;
}

/** Details post action. */
.details button {
	display: inline-block;
	background: none;
	border: none;
	padding: 0;
	text-align: left;
	color: #0073aa;
	cursor: pointer;
	text-decoration: underline;
}

